# cpack_outside_of_build_folder

./: README.md
QCoreApplication_quit_example/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
